--- a/Projects/Threading/Threading.csproj
+++ b/Projects/Threading/Threading.csproj
@@ -52,4 +52,11 @@
 	  <PackageReference Include="armat.utils" Version="1.0.0" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <None Update="AppIcon.png">
+	    <Pack>True</Pack>
+	    <PackagePath>\</PackagePath>
+	  </None>
+	</ItemGroup>
+
 </Project>
