Fixed Readme Packaging

--- a/Projects/Threading/Threading.csproj
+++ b/Projects/Threading/Threading.csproj
@@ -49,14 +49,20 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="armat.utils" Version="1.0.0" />
+
+		<PackageReference Include="armat.utils" Version="1.0.0" />
+
 	</ItemGroup>
 
 	<ItemGroup>
-	  <None Update="AppIcon.png">
-	    <Pack>True</Pack>
-	    <PackagePath>\</PackagePath>
-	  </None>
+		<None Update="AppIcon.png">
+			<Pack>True</Pack>
+			<PackagePath>\</PackagePath>
+		</None>
+		<None Update="Readme.md">
+			<Pack>True</Pack>
+			<PackagePath>\</PackagePath>
+		</None>
 	</ItemGroup>
 
 </Project>
