--- a/Projects/ThreadingTest/ThreadingTest.csproj
+++ b/Projects/ThreadingTest/ThreadingTest.csproj
@@ -40,6 +40,21 @@
 		<ProjectReference Include="..\Threading\Threading.csproj" />
 	</ItemGroup>
 
+	<ItemGroup Condition="'$(Configuration)' != 'Debug'">
+		<PackageReference Include="armat.utils" Version="1.0.0" />
+	</ItemGroup>
+
+	<!-- Begin: Simplify the development by including the locally built version of the dependency modules-->
+	<PropertyGroup Condition="'$(Configuration)' == 'Debug'">
+		<ArmatRepoRoot>D:/Sources/GitHub</ArmatRepoRoot>
+	</PropertyGroup>
+	<ItemGroup Condition="'$(Configuration)' == 'Debug'">
+		<Reference Include="armat.utils">
+			<HintPath>$(ArmatRepoRoot)/Utilities/bin/$(Configuration)/armat.utils.dll</HintPath>
+		</Reference>
+	</ItemGroup>
+	<!-- End: Simplify the development by including the locally built version of the dependency modules-->
+
 	<!-- Remove redundant translation directories from bin -->
 	<!-- See https://stackoverflow.com/questions/31289043/unwanted-culture-specific-dlls-copied-to-bin-directory/34362524#34362524 -->
 	<ItemGroup>
