--- a/Projects/ThreadingTest/ThreadingTest.csproj
+++ b/Projects/ThreadingTest/ThreadingTest.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 
@@ -9,7 +9,7 @@
 		<RootNamespace>Armat.Threading</RootNamespace>
 		<AssemblyName>armat.threading.test</AssemblyName>
 
-		<Version>2.0.0</Version>
+		<Version>2.0.1</Version>
 		<AssemblyVersion>$(Version).0</AssemblyVersion>
 		<FileVersion>$(Version).0</FileVersion>
 
@@ -47,7 +47,7 @@
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(Configuration)' != 'Debug'">
-		<PackageReference Include="armat.utils" Version="1.0.0" />
+		<PackageReference Include="armat.utils" Version="2.0.1" />
 	</ItemGroup>
 
 	<!-- Begin: Simplify the development by including the locally built version of the dependency modules-->
